# claude-config-studio

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  app.go  go.mod  go.sum  main.go  package-lock.json  package.json  wails.json
.claude/: settings.json
.claude/agents/: architect.md  build-error-resolver.md  ceo-bezos.md  code-reviewer.md  cto-vogels.md  fullstack-dhh.md  interaction-cooper.md  marketing-godin.md  operations-pg.md  product-norman.md  qa-bach.md  refactor-cleaner.md  sales-ross.md  security-reviewer.md  tdd-guide.md  ui-duarte.md
.claude/commands/: build-fix.md  checkpoint.md  code-review.md  e2e.md  learn.md  orchestrate.md  plan.md  refactor-clean.md  tdd.md  verify.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/: API.md  contributing.md  index.md
frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.json  vite.config.ts
npm/: README.md  package.json
python/openviking-mcp/: README.md  pyproject.toml
python/openviking-mcp/src/openviking_mcp/: __init__.py  __main__.py  cli.py  config.py  server.py  sync.py
python/openviking-mcp/tests/: test_cli.py  test_config.py  test_server.py  test_sync.py
registry/: index.json
scripts/: check-memory-saved.sh  detect-project.sh  generate-platform-packages.js  install.sh  pre-compact-save.sh  publish-all.js
services/: config_service.go  export_service.go  extension_service.go  hooks_service.go  mcp_service.go  plugin_service.go  project_service.go  skill_service.go  template_service.go
(+172 files in other folders)
